styles/pwa.less
html {
    overflow: visible;
    position: relative;

    /* prevent iOS from showing callouts like when long pressing an image */
    -webkit-touch-callout: none;
    -webkit-tap-highlight-color: transparent;

    /* Prevent font scaling in landscape while allowing user zoom */
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    text-size-adjust: 100%;

    /* make things more "app" like: disable text selection */
    // -webkit-user-select: none;

    
    --gutter: 2em;
    --view-gutter: var(--gutter); // DEPRECATED: use --gutter

    --safe-bottom: env(safe-area-inset-bottom);
    --safe-top: env(safe-area-inset-top);
    --safe-left: env(safe-area-inset-left);
    --safe-right: env(safe-area-inset-right);

    --gutter-safe-bottom: calc(var(--gutter) + var(--safe-bottom));
    --gutter-safe-top: calc(var(--gutter) + var(--safe-top));
    --gutter-safe-left: calc(var(--gutter) + var(--safe-left));
    --gutter-safe-right: calc(var(--gutter) + var(--safe-right));
    --gutter-safe: var(--gutter-safe-top) var(--gutter-safe-right) var(--gutter-safe-bottom) var(--gutter-safe-left);

    --font-system: -apple-system, BlinkMacSystemFont, "Segoe UI",
               Roboto, Oxygen-Sans, Ubuntu, Cantarell,
               "Helvetica Neue", sans-serif;
}

html.ios.installed {
    // top: env(safe-area-inset-top);
    top: calc(env(safe-area-inset-top) / 1.25);
    height: calc( 100% + (env(safe-area-inset-top) / 4));
}

html, body {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

/*
    Only require one side to be large. Android will shrink the viewport
    when the keyboard opens
*/
@media (min-width:600px), (min-height:600px) {
    html.mobile:not(.chromeos) body {
        // little larger on tablets
        font-size: 18px;
    }
}

// slightly larger menu on small screens
@media
screen and (orientation:landscape) and (max-width:999px) and (max-height:599px),
screen and (orientation:portrait) and (max-height:999px) and (max-width:599px)
{

    :root {
        --gutter: var(--gutter-mobile, 1em);
    }
    
    :root.mobile .popover .b-menu {
        font-size: 1.1em;
    }

    :root.mobile b-panels[name="root"] {
        top: 0;
        z-index: 110;
    }
}

// change Menu presenter styling when rendered within a Panel (or modal)
b-panel {
    --b-menu-input-radius: 4px;
    --b-menu-input-font-size: 1em;
    --b-menu-input-padding: .5em;
}

:root:not(.mobile) b-panel[type="search-popup"] {
    --radius: 1em;
    position: fixed;
    z-index: 2000 !important;
    top: 0;
    background: rgba(var(--dark-bgd-rgb), .7);
}

